add css for fixing issues about remove item at tablet size

--- a/index.html
+++ b/index.html
@@ -325,6 +325,25 @@
                         <li>Verishop: $30 Million In Funding Raised And Valuation Of More Than $100 Million</li>
                     </ul>
                 </div>
+                <div class="news--two--item remove">
+                    <div class="header">
+                        <img class="image"
+                            src="https://index.tnwcdn.com/images/5ec987de33ab1484549cc14ddebf135ead38b35d.png"
+                            alt="image">
+                        <h2 class="title">
+                            Verishop
+                        </h2>
+                        <div class="subtitle">
+                            <strong>$12.5M</strong>
+                            <p>Venture Captital</p>
+                        </div>
+                    </div>
+                    <ul>
+                        <li>Lifestyle</li>
+                        <li>Lightspeed Venture Partners</li>
+                        <li>Verishop: $30 Million In Funding Raised And Valuation Of More Than $100 Million</li>
+                    </ul>
+                </div>
             </div>
             <div class="news--three--list">
                 <div class="news--three--item">
