fixing articles mobile responsive

--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
             </div>
 
             <h1 class="news--title">
-                Latest news <span class="title-icon"><i class="fa fa-chevron-right"></i></span>
+                Latest Deals <span class="title-icon"><i class="fa fa-chevron-right"></i></span>
             </h1>
             <div class="news--one--list">
                 <div class="news--one--item">
